@@ -1,5 +1,6 @@
 Upcoming:
 - Big optimization during worldgen. WIP
+- New forceSaplingGrowth server config option to disable the expensive auto sapling grow
 
 1.20-7.1.8:
 - New 'stuff' feature. Using this you can define various random small objects that can be generated through cities (both inside and outside buildings)
